src/tests/errors/staticanalysis/typing/typeerrors/procedure2_fail.cmp
program procedure2_fail
begin

	proc Proc() : string 
	begin
	   return  42  /* error, Proc declared as returning string */
	end;

	proc main()
	begin
	   Proc();
	end
end